# EconExplainer

./: .gitignore  pyproject.toml
.github/workflows/: ci.yaml
source/: conf.py  index.rst
source/_static/: custom.css
source/docs/: glossary.rst  introduction.rst
source/docs/microeconomics/: elasticity.rst  index.rst  price-controls.rst  supply-and-demand.rst  type-of-economies.rst  type-of-goods.rst
